# chardetng_j

./: .gitignore  COPYRIGHT  Cargo.toml  README.md
main/nu/validator/chardetng/: EncodingDetector.java  package-info.java
src/: lib.rs
test/nu/validator/chardetng/test/: DetectorTester.java  package-info.java
